--- a/optimaization tech..ipynb
+++ b/optimaization tech..ipynb
@@ -1,8 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "2c060138",
+   "metadata": {},
+   "source": [
+    "!pip install ta-lib\n",
+    "!pip install numba"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 42,
    "id": "9b1ddcf1",
    "metadata": {},
    "outputs": [],
@@ -11,12 +20,15 @@
     "import numpy as np\n",
     "import vectorbt as vbt\n",
     "import yfinance\n",
-    "import datetime"
+    "import datetime\n",
+    "import talib\n",
+    "import numba\n",
+    "from numba import njit"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 43,
    "id": "99c09bcd",
    "metadata": {},
    "outputs": [],
@@ -27,13 +39,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 44,
    "id": "de03e132",
    "metadata": {},
    "outputs": [],
    "source": [
     "btc_price = vbt.YFData.download(\n",
-    "    ['BTC-USD','ETH-USD'],\n",
+    "    ['BTC-USD'],\n",
     "    start = start_date,\n",
     "    end = end_date,\n",
     "    missing_index=['drop'],\n",
@@ -43,21 +55,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "df0988a4",
+   "execution_count": 45,
+   "id": "3f70fb47",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def custom_indicator(close, rsi_window=14, entry=30, exit=70):\n",
-    "    rsi = vbt.RSI.run(close, window = rsi_window).rsi\n",
-    "    trend = np.where(rsi>exit, -1, 0)\n",
-    "    trend = np.where(rsi<entry, 1, trend)\n",
-    "    return trend"
+    "RSI = vbt.IndicatorFactory.from_talib('RSI')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2e0cd134",
+   "metadata": {},
+   "source": [
+    "##### The following way of implementing bactesters is 30%  faster than simply using the VBT"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 46,
+   "id": "df0988a4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@njit\n",
+    "def produce_signal(rsi, entry, exit):\n",
+    "    trend = np.where(rsi>exit, -1, 0)\n",
+    "    trend = np.where(rsi<entry, 1, trend)\n",
+    "    return trend\n",
+    "\n",
+    "def custom_indicator(close, rsi_window=14, entry=30, exit=70):\n",
+    "#     rsi = vbt.RSI.run(close, window = rsi_window).rsi\n",
+    "    rsi = RSI.run(close, rsi_window).real.to_numpy()\n",
+    "    return produce_signal(rsi, entry, exit)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
    "id": "679095d6",
    "metadata": {},
    "outputs": [],
@@ -78,54 +113,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "83bb5b69",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "res = ind.run(\n",
-    "        btc_price,\n",
-    "        rsi_window=np.arange(10,40, step=3, dtype=int),\n",
-    "        entry=np.arange(10,40, step=4, dtype=int),\n",
-    "        exit=np.arange(60,80, step=4, dtype=int),\n",
-    "        param_product = True\n",
-    "        )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "7279ab35",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "entries = res.value == 1.0\n",
-    "exits = res.value == -1.0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "345bf724",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pf = vbt.Portfolio.from_signals(btc_price,entries,exits)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 48,
    "id": "4ec3705a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "returns = pf.total_return()"
+    "rsi_windows =np.arange(10,40, step=3, dtype=int),\n",
+    "master_returns = []\n",
+    "# use for loop to increase speed and decrease the ram load:\n",
+    "for rsi_window in rsi_windows:\n",
+    "    res = ind.run(\n",
+    "            btc_price,\n",
+    "            rsi_window=rsi_window,\n",
+    "            entry=np.arange(10,40, step=4, dtype=int),\n",
+    "            exit=np.arange(60,80, step=4, dtype=int),\n",
+    "            param_product = True\n",
+    "            )\n",
+    "    entries = res.value == 1.0\n",
+    "    exits = res.value == -1.0\n",
+    "    pf = vbt.Portfolio.from_signals(btc_price,entries,exits)\n",
+    "    master_returns.append(pf.total_return())\n",
+    "returns = pd.concat(master_returns)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 49,
    "id": "e0a46d77",
    "metadata": {},
    "outputs": [
@@ -133,8 +146,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.023525474221192725\n",
-      "(19, 10, 76, 'ETH-USD')\n"
+      "0.028256079987327213\n",
+      "(28, 34, 60)\n"
      ]
     }
    ],
@@ -145,30 +158,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "50c05b76",
+   "id": "ce79e3d9",
    "metadata": {},
    "source": [
     "##### Saving btc_price as csv file and then using it\n",
-    "btc_price.to_csv('data01.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "d1ccedc7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "btc_price = pd.read_csv('data01.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "8e5bc6cd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "btc_price.to_csv('data01.csv')\n",
+    "\n",
+    "btc_price = pd.read_csv('data01.csv')\n",
+    "\n",
     "btc_price.set_index('Datetime',inplace=True)"
    ]
   },
